agavedancer/public/styles/layout.less
*, *:before, *:after {
	-moz-box-sizing: border-box;
	webkit-box-sizing: border-box;
	box-sizing: border-box;
}

html, body {
	font-size: 14px;
	line-height: 1.5rem;
	height: 100%;
	min-height: 100%;
	overflow: hidden;
}

.glyphicon {
	top: 2px;
	padding-bottom: 5px;
}
	
.row {
	margin-left: 0;
	margin-right: 0;
}

th {
 	padding-right: 10px;
}

.info-message {
    background-color: #f0f7ff;
    border: 1px solid #009bad;
    border-radius: 3px;
    padding: 5px;
    padding-left: 6px;
    margin: 5px 5px 6px 5px;
    min-height: 15px;
}

.btn:active,
.btn:focus,
.btn.active,
.btn:focus:active {
  background-image: none;
  outline: 0;
  -webkit-box-shadow: none;
          box-shadow: none;
}

.list-group-item:active,
.list-group-item:focus,
.list-group-item.active,
.list-group-item:focus:active {
  background-image: none;
  outline: 0;
  -webkit-box-shadow: none;
          box-shadow: none;
}

.leftbar {
	padding: 0;
	width: 16.5rem;
	margin: 0;
	background: #d7f4f4;
	overflow: auto;
}

.leftbar .panel-group .panel {
	border-radius: 0px;
}

.leftbar .panel-heading {
	padding: 10px 10px;
}

.rightbar {
	padding: 0;
	width: 16.5rem;
	margin: 0;
	background: #d7f4f4;
	overflow: auto;
}

.rightbar .panel {
	margin-bottom: 5px;
	text-align: left;
}

.rightbar .btn-toolbar {
	background: #eee;
	padding-left: 5px;
}

.rightbar .list-group-item {
	margin-left: 0;
	padding: 0 0;
	word-wrap: break-word;
}

.rightbar .btn {
	padding-left: 0px;
	padding-right: 0px;
	padding-top: 0px;
	padding-bottom: 3px;
	margin-left: 0px;
	margin-right: 2px;
	max-width: 140px;
	overflow: hidden;
	text-overflow: ellipsis;
}

.rightbar .btn-toolbar>.btn:first-child {
	margin-left: -2px;
}

.main {
	padding: 0.3rem;
	margin: 0;
	background: #FFFFFF;
	overflow: auto;
	border-left: solid #999 1px;
	border-right: solid #999 1px;
}

.table {
	margin-bottom: 0;
}

.main .panel-default,
.modal-body .panel-default {
	border-color: #ffcc80;
}

.main .panel-heading,
.modal-body .panel-heading {
	padding: 2px 9px;
	font-weight: bold;
}

.main .panel-default>.panel-heading,
.modal-body .panel-default>.panel-heading, {
	background-color: #faebcc;
	border-color: #ffcc80;
}

.apps-panel-title {
	margin-top: 0;
	margin-bottom: 0;
	background:#eee;
	color: inherit;
}

.apps-panel-header {
	height: 30px;
	z-index: 1000;
	text-shadow: rgba(255,255,255,0.8) 0 1px 0;
	background: #eee;
	border-bottom: solid #999 1px;
	margin: 0;
	padding-top: 3px;
	padding-right: 10px;
	padding-left: 10px;
	font-weight: bold;
	color: #555;
}

.search-wrapper {
	width: 85%;
	text-align:center;
	padding-top: 10px;
	margin: auto;
	padding-bottom: 10px;
}

.app-search-box {
	width: 100%;
	border: 1px solid #ccc;
	outline: 0;
	border-radius: 15px;
	padding-left: 15px;
}

.app-search-box:focus {
	box-shadow: 0 0 15px 5px #b0e0ee;
	border: 2px solid #bebede;
}

